<resources>
    <string name="app_name">Jacks GoGo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyCMYeEyLLVhDgE3lo_PlS1VbSwZtWUVdBM</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_profile">Profile</string>
    <string name="quick_job_title">Quick Jobs</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="history">History</string>
    <string name="pending_search_placeholder">Search through Pending list</string>
    <string name="confirmed_search_placeholder">Search through Confirmed list</string>
    <string name="history_search_placeholder">Search through History list</string>
    <string name="joined_go_club_search_placeholder">Search through Joined GoClubs</string>
    <string name="go_club_members_search_placeholder">Search through All Memebers</string>
    <string name="title_empty"></string>
    <string name="submit_report">Submit Report</string>
    <string name="services">Services</string>
    <string name="jobs">Jobs</string>
    <string name="go_club">GoClub</string>
    <string name="search_result">Search Results</string>
    <string name="canceled">Canceled</string>
    <string name="favourite_events">Events</string>
    <string name="favourite_users">Users</string>
    <string name="menu_option_edit">Edit</string>
    <string name="menu_option_delete">Delete</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_map">Map</string>
    <string name="title_location">Select Location</string>
    <string name="title_service_listing">Service Listing</string>
    <string name="title_active_service_around">Active Services Around</string>
    <string name="title_active_job_around">Active Jobs Around</string>
    <string name="title_active_goclub_around">Active GoClub Around</string>
    <string name="title_active_event_around">Active Events Around</string>
    <string name="title_post_service">Post A Service</string>
    <string name="title_post_job">Post A Job</string>
    <string name="title_post_event">Post A Event</string>
    <string name="title_post_goclub">Post A GoClub</string>
    <string name="title_invite_service_provider">Invite Service Providers</string>
    <string name="title_time_slots">Time Slots</string>
    <string name="title_review">Reviews</string>
    <string name="title_buy_service">Buy Service</string>
    <string name="title_credit_card">Credit Card</string>
    <string name="title_jacks_wallet">Jacks Wallet</string>
    <string name="title_request_quotation">Request A Quotation</string>
    <string name="title_verify_new_skill">Verify New Skills</string>
    <string name="menu_option_share">Share</string>
    <string name="menu_option_report_service">Report Service</string>
    <string name="menu_option_report_job">Report Job</string>
    <string name="menu_option_report_event">Report Event</string>
    <string name="menu_option_report_go_club">Report GoClub</string>
    <string name="menu_option_leave_go_club">Leave GoClub</string>
    <string name="menu_option_withdraw_event">Withdraw From Event</string>
    <string name="menu_option_withdraw_job">Withdraw From Job</string>
    <string name="menu_option_reschedule">Reschedule</string>
    <string name="setup_credit_card">Set Up Credit Card</string>
    <string name="jacks_wallet">Top Up Jacks Wallet - balance $10.00</string>
    <string name="posted_service_duplicate">Duplicate</string>
    <string name="jgg_alert_title">JacksGoGo!!!</string>
    <string name="jgg_error_desc">Some of the data is missed.</string>
    <string name="alert_report_service_title">Report Service</string>
    <string name="alert_report_job_title">Report Job</string>
    <string name="alert_report_service_desc">Mark this post as inappropriate or offensive.</string>
    <string name="alert_report_service_thanks_title">Thank You!</string>
    <string name="alert_report_service_thanks_desc">Our team will be looking into the matter.</string>
    <string name="alert_done">Done</string>
    <string name="alert_ok">OK</string>
    <string name="alert_withdraw">Withdraw</string>
    <string name="alert_delete">Delete</string>
    <string name="alert_report_service_ok">Report</string>
    <string name="alert_payment_setup_success">Payment Set Up Successfully!</string>
    <string name="alert_quit_quotation_title">Quit Requesting A Quotation?</string>
    <string name="alert_quit_post_service_title">Quit Posting A New Service?</string>
    <string name="alert_quit_post_job_title">Quit Posting A New Job?</string>
    <string name="alert_quit_post_go_club_title">Quit Creating A New GoClub?</string>
    <string name="alert_quit_post_event_title">Quit Creating A New Event?</string>
    <string name="alert_quit_quotation_desc">All info will be lost.</string>
    <string name="alert_post_failed_desc">You can\'t perform this action because didn\'t login. Would you login to proceed this?</string>
    <string name="alert_quit_button">Quit</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_job_edit_title">Changes updated!</string>
    <string name="alert_job_edit_desc">We will notify the bidding service providers about the changes.</string>
    <string name="alert_job_posted_title">Job Posted!</string>
    <string name="alert_job_posted_desc">Job reference no: </string>
    <string name="alert_view_job_button">View Job</string>
    <string name="alert_service_posted_title">Submission Sent!</string>
    <string name="alert_verify_job_completed_title">Verify Job As Completed?</string>
    <string name="alert_verify_job_completed_desc">You have 7 days after sales service.</string>
    <string name="alert_verify_job_completed_ok">Verify</string>
    <string name="alert_view_service_button">View Post</string>
    <string name="alert_verify_skill_title">Submission Sent!</string>
    <string name="alert_verify_skill_desc">Thank you for verifying! Our team will contact you shortly.</string>
    <string name="alert_verify_skill_button">Back To Service Listing</string>
    <string name="alert_posted_service_delete_title">Delete Service?</string>
    <string name="alert_posted_service_delete_desc">Deleted services can be found in Service Listing.</string>
    <string name="alert_posted_job_delete_title">Delete Job?</string>
    <string name="alert_posted_job_delete_desc">Deleted jobs can be found in Appointments, under History tab.</string>
    <string name="alert_edit_job_delete_desc">Let the providers know why you are cancelling the job.</string>
    <string name="alert_email_sent_title">Email Sent!</string>
    <string name="alert_email_sent_desc">Check your email for the next steps.</string>
    <string name="alert_success_title">Success!</string>
    <string name="alert_payment_method_desc">Payment method is set up and ready to be used.</string>
    <string name="alert_remove_card_title">Remove This Card?</string>
    <string name="alert_remove_button">Remove</string>
    <string name="alert_forgot_pass_title">Forgot Password?</string>
    <string name="alert_forgot_pass_desc">Enter your email linked to your account below. We will send you an email with steps to reset your password.</string>
    <string name="alert_forgot_pass_send">Send</string>
    <string name="share_dlg_title">Share with your friend</string>
    <string name="share_dlg_actions">Actions</string>
    <string name="job_details_title">Job Details</string>
    <string name="post_job_desc_title">Give your job a short title.</string>
    <string name="post_job_desc_description">Describe the job you need done.</string>
    <string name="post_job_desc_tag">Add tags to your job(optional).</string>
    <string name="post_job_address_desc">We will only show the full address to the service provider you have awarded the job to.</string>
    <string name="post_job_address_title">Where do you need the services?</string>
    <string name="post_job_budget_no_limit_desc">Responding service providers will be asked to quote an amount.</string>
    <string name="edit_job_tag_describe">Describe</string>
    <string name="edit_job_tag_time">Time</string>
    <string name="edit_job_tag_address">Address</string>
    <string name="edit_job_tag_report">Report</string>
    <string name="edit_job_address_title">Where do you need the services?</string>
    <string name="edit_job_address_desc">We will only show the full address to the service provider you have awarded the job to.</string>
    <string name="address_place_name_title">Place Name</string>
    <string name="address_unit_title">Unit</string>
    <string name="address_street_title">Street</string>
    <string name="address_postcode_title">Postcode</string>
    <string name="edit_job_report_title">Choose how you want to verify the completed work(optional).</string>
    <string name="edit_job_report_before_title">Before &amp; After Photo.</string>
    <string name="edit_job_report_before_desc">Take photos before the start of your work, and then after the end to show the work result.</string>
    <string name="edit_job_report_geo_titles">Geotracking</string>
    <string name="edit_job_report_geo_desc">Track where you begin at the start of your work, and every 10 minutes, until you reach your destination.</string>
    <string name="edit_job_report_pin_titles">PIN Code</string>
    <string name="edit_job_report_pin_desc">Useful for delivery jobs. The recipient should be given the code before hand to confirm.</string>
    <string name="post_new_service">Post New Service</string>
    <string name="buy_service">Buy Service</string>
    <string name="go_to_summary">Go To Summary</string>
    <string name="pin_request"> has requested a PIN code. Your recipient should give you the PIN code.</string>
    <string name="alert_job_completed">Job Completed</string>
    <string name="msg_job_complete">has been notified and will verify the work doen.</string>
    <string name="proposal_title">Proposal</string>
    <string name="edit_proposal_title">Edit Proposal</string>
    <string name="proposal_save">Save</string>
    <string name="title_make_proposal">Make A Proposal</string>
    <string name="people_viewed_job">people have viewed this job recently!</string>
    <string name="viewing_now">viewing now</string>
    <string name="alert_quit_post_proposal_title">Quit Making A Proposal?</string>
    <string name="post_proposal_explain_title">Explain briefly how you can help with the job.</string>
    <string name="post_proposal_expressed">You have expressed an interest in the job:</string>
    <string name="post_proposal_bid_client_budget">Client budget:</string>
    <string name="post_proposal_bid_breakdown">Bid Breakdown (Optional)</string>
    <string name="rescheduling_policy">Rescheduling Policy (Optional)</string>
    <string name="no_reschedule_allowed">No rescheduling allowed.</string>
    <string name="allowed_reschedule">Allowed, reschedule before...</string>
    <string name="special_terms">If you have any special terms for rescheduling, state below (Optional):</string>
    <string name="alert_view_proposal">View Proposal</string>
    <string name="alert_proposal_posted_title">Proposal Sent!</string>
    <string name="next">Next</string>
    <string name="no_limit">No limits.</string>
    <string name="limit_to">Limit to...</string>
    <string name="limit_description">Do you have a limit on number of attendees?</string>
    <string name="admin_desc">You will be the default admin of your GoClub. Do you want to add others?</string>
    <string name="sole_admin">I will be the sole admin.</string>
    <string name="add_others">Add others...</string>
    <string name="added_as_admin">Added as admin:</string>
</resources>