<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/posted_goclub_menu_share"
        android:icon="@mipmap/icon_share_purple"
        android:title="@string/menu_option_share" />
    <item
        android:id="@+id/posted_goclub_menu_edit"
        android:icon="@mipmap/button_edit_purple"
        android:title="@string/menu_option_edit" />
    <item
        android:id="@+id/posted_goclub_menu_duplicate"
        android:icon="@mipmap/button_duplicate_purple"
        android:title="@string/posted_service_duplicate" />
    <item
        android:id="@+id/posted_goclub_menu_withdraw"
        android:icon="@mipmap/button_cross_fat_purple"
        android:title="@string/menu_option_withdraw_event" />
    <item
        android:id="@+id/posted_goclub_menu_delete"
        android:icon="@mipmap/button_delete_purple"
        android:title="@string/menu_option_delete" />
</menu>