<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="20dp"
    android:layout_gravity="center"
    android:background="@color/JGGWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="16dp"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/JGGBlack"
        android:textSize="@dimen/button_font_size"
        android:fontFamily="@font/mulibold"
        android:text="@string/alert_forgot_pass_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/JGGBlack"
        android:fontFamily="@font/muliregular"
        android:textSize="@dimen/list_title_font_size"
        android:text="@string/alert_forgot_pass_desc"/>

    <EditText
        android:hint="Email"
        android:id="@+id/txt_forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="@dimen/edit_text_padding_size"
        android:fontFamily="@font/muliregular"
        android:textSize="@dimen/list_title_font_size"
        android:background="@drawable/grey_border_background">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_below="@id/lbl_alert_description">

        <TextView
            android:id="@+id/btn_alert_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/JGGOrange10Percent"
            android:textColor="@color/JGGOrange"
            android:fontFamily="@font/mulibold"
            android:textSize="@dimen/list_title_font_size"
            android:text="@string/alert_cancel"/>

        <TextView
            android:id="@+id/btn_alert_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/JGGOrange"
            android:textColor="@color/JGGWhite"
            android:fontFamily="@font/mulibold"
            android:textSize="@dimen/list_title_font_size"
            android:text="@string/alert_forgot_pass_send"/>
    </LinearLayout>
</LinearLayout>