<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kelvin.jacksgogo.Fragments.GoClub_Event.GcAdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_admin_desc"
            android:text="@string/admin_desc"
            android:fontFamily="@font/mulibold"
            android:textSize="@dimen/list_title_font_size"
            android:textColor="@color/JGGBlack"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_sole_admin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="@dimen/edit_text_padding_size"
            android:text="@string/sole_admin"
            android:textAllCaps="false"
            android:fontFamily="@font/muliregular"
            android:textSize="@dimen/list_title_font_size"
            android:textColor="@color/JGGPurple"
            android:background="@drawable/purple_border_background"
            android:gravity="start"/>
        <Button
            android:id="@+id/btn_others"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="@dimen/edit_text_padding_size"
            android:text="@string/add_others"
            android:textAllCaps="false"
            android:fontFamily="@font/muliregular"
            android:textSize="@dimen/list_title_font_size"
            android:textColor="@color/JGGPurple"
            android:background="@drawable/purple_border_background"
            android:gravity="start"/>
        <LinearLayout
            android:id="@+id/ll_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_added_user"
                android:text="@string/added_as_admin"
                android:fontFamily="@font/mulibold"
                android:textSize="@dimen/list_title_font_size"
                android:textColor="@color/JGGBlack"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/admin_recycler_view"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"></android.support.v7.widget.RecyclerView>
            </RelativeLayout>
            <Button
                android:id="@+id/btn_summary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/go_to_summary"
                android:fontFamily="@font/muliregular"
                android:textSize="@dimen/list_title_font_size"
                android:textColor="@color/JGGWhite"
                android:textAllCaps="false"
                android:background="@color/JGGPurple"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
