<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kelvin.jacksgogo.Fragments.Jobs.JobReportEditToolsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <LinearLayout
                android:id="@+id/ll_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/cyan_border_background">
                <TextView
                    android:id="@+id/txt_photo_title"
                    android:text="@string/edit_job_report_before_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/JGGCyan"
                    android:fontFamily="@font/mulibold"
                    android:textSize="@dimen/list_text_font_size"/>
                <TextView
                    android:id="@+id/txt_photo_desc"
                    android:text="@string/edit_job_report_before_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/JGGBlack"
                    android:background="@color/transparent"
                    android:fontFamily="@font/muliregular"
                    android:textSize="@dimen/list_text_font_size"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <LinearLayout
                android:id="@+id/ll_geo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/cyan_border_background">
                <TextView
                    android:id="@+id/txt_geo_title"
                    android:text="@string/edit_job_report_geo_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/JGGCyan"
                    android:fontFamily="@font/mulibold"
                    android:textSize="@dimen/list_text_font_size"/>
                <TextView
                    android:id="@+id/txt_geo_desc"
                    android:text="@string/edit_job_report_geo_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/JGGBlack"
                    android:background="@color/transparent"
                    android:fontFamily="@font/muliregular"
                    android:textSize="@dimen/list_text_font_size"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <LinearLayout
                android:id="@+id/ll_pin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/cyan_border_background">
                <TextView
                    android:id="@+id/txt_pin_title"
                    android:text="@string/edit_job_report_pin_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/JGGCyan"
                    android:fontFamily="@font/mulibold"
                    android:textSize="@dimen/list_text_font_size"/>
                <TextView
                    android:id="@+id/txt_pin_desc"
                    android:text="@string/edit_job_report_pin_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/JGGBlack"
                    android:background="@color/transparent"
                    android:fontFamily="@font/muliregular"
                    android:textSize="@dimen/list_text_font_size"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
