<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kelvin.jacksgogo.Fragments.GoClub_Event.GcLimitFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/JGGGrey5"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_limit_desc"
                android:text="@string/limit_description"
                android:fontFamily="@font/mulibold"
                android:textSize="@dimen/list_title_font_size"
                android:textColor="@color/JGGBlack"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_no_limit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:padding="@dimen/edit_text_padding_size"
                android:text="@string/no_limit"
                android:textAllCaps="false"
                android:fontFamily="@font/muliregular"
                android:textSize="@dimen/list_title_font_size"
                android:textColor="@color/JGGPurple"
                android:background="@drawable/purple_border_background"
                android:gravity="start"/>
            <Button
                android:id="@+id/btn_limit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:padding="@dimen/edit_text_padding_size"
                android:text="@string/limit_to"
                android:textAllCaps="false"
                android:fontFamily="@font/muliregular"
                android:textSize="@dimen/list_title_font_size"
                android:textColor="@color/JGGPurple"
                android:background="@drawable/purple_border_background"
                android:gravity="start"/>
            <EditText
                android:id="@+id/edit_pax"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/grey_border_background"
                android:textAllCaps="false"
                android:inputType="number"
                android:fontFamily="@font/muliregular"
                android:textSize="@dimen/list_title_font_size"
                android:paddingLeft="@dimen/edit_text_padding_size"
                android:hint="Pax"/>
            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/next"
                android:fontFamily="@font/muliregular"
                android:textSize="@dimen/list_title_font_size"
                android:textColor="@color/JGGGrey1"
                android:textAllCaps="false"
                android:background="@color/JGGGrey3"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
